--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,14 @@ bld/
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
+# NUnit
+*.VisualState.xml
+TestResult.xml
+nunit-*.xml
 
 # Build Results of an ATL Project
 [Dd]ebugPS/
